# cmake-demo

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  create.bat
HalconApp/: CMakeLists.txt  HalconApp.sublime-project  HalconApp.sublime-workspace
HalconApp/src/: CMakeLists.txt  main.cpp
MathFunctions/: CMakeLists.txt  mysqrt.cxx
cmake-demo/: CMakeLists.txt  main.cpp
cmake-demo/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx
